syntax = "proto3";

package envoymobile.extensions.filters.http.assertion;

import "envoy/config/common/matcher/v3/matcher.proto";

import "validate/validate.proto";

message Assertion {
  // The match configuration. If the configuration matches the request frames the filter will send
  // a local reply with Http::Code::OK on the last frame of the request stream (continuing on
  // intervening frames). Otherwise, it will send a local reply with Http::Code::BadRequest.
  // TODO: update upstream MatchPredicate proto to require at least one matcher.
  envoy.config.common.matcher.v3.MatchPredicate match_config = 1
      [(validate.rules).message = {required: true}];
}
